[package]
name = "pwfuzz-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "Michael Taggart <mtaggart@taggart-tech.com>"
description = "Password list mutator/expander"
repository = "https://github.com/mttaggart/pwfuzz-rs"
readme = "README.md"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
rand = "0.8.0"
serde = { version = "1.0.136", features=["derive"] }
serde_json = "1.0"