[package]
name = "pwfuzz-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Michael Taggart <mtaggart@taggart-tech.com>"]
description = "Password list mutator/expander"
repository = "https://github.com/mttaggart/pwfuzz-rs"
readme = "README.md"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
